refactor: assertThat 메서드에서 getFirst() 사용으로 변경